hphp/test/zend/good/ext/mysqli/tests/067.php.skipif
<?php
	require_once('skipif.inc');
	require_once('skipifconnectfailure.inc');
	require_once("connect.inc");

	if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket))
		die("skip Cannot connect to check required version");

	/* skip cursor test for versions < 50004 */
	if ((!$IS_MYSQLND && (mysqli_get_client_version() < 50009)) ||
			(mysqli_get_server_version($link) < 50009)) {
			die(sprintf("skip Client library doesn't support cursors (%s/%s)",
					mysqli_get_client_version(), mysqli_get_server_version($link)));
	}
	mysqli_close($link);
?>