hphp/test/zend/bad/ext/mysqli/tests/mysqli_mysqlnd_read_timeout.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
require_once('connect.inc');
if (!$IS_MYSQLND)
	/* The libmysql read_timeout limit default is 365 * 24 * 3600 seconds. It cannot be altered through PHP API calls */
	die("skip mysqlnd only test");
?>